removed callbacks because weren't working, using hide to prevent overscrolling on mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -133,7 +133,6 @@ body {
   //position: absolute;
   top: 0;
   display: hidden;
-  overflow-y: visible;
   transition-duration: 500ms;
   -webkit-transform: translate3d(100%, 0, 0);
   -moz-transform: translate3d(100%, 0, 0);
